Fixed Hyperlink added scrollbar.

--- a/src/style.css
+++ b/src/style.css
@@ -73,6 +73,10 @@
 	margin: 0;
 	padding: 0;
   }
+
+  html {
+    overflow-y: scroll;
+  }
   
   html,
   body {
